# sya-detector

./: .design-state.json  .gitignore  2509.21305v3.txt  LICENSE  README.md  pyproject.toml  requirements.txt
backend/: cleaner.py  main.py  models.py  pipeline.py  prompts.py
extension/: content_script.js  manifest.json  service_worker.js
extension/popup/: popup.html  popup.js
