[project]
name = "Drift"
version = "0.1.0"
description = "Detect sycophantic agreement (SyA) in LLM conversations and strip hollow openers (SYPR)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "openai>=1.66.0",
    "uvicorn==0.34.0",
]
